# roottap

./: .gitignore  LICENSE  README.md
.github/workflows/: firmware-build.yml
docs/: architecture.md  auth-test.md  protocol.md
docs/setup/: SETUP_ARCH.md  rust.md
docs/setup/OTA/: over_usb.md  partitions.csv
firmware/esp32/: sdkconfig.defaults
firmware/esp32/components/button/: CMakeLists.txt  button.c
firmware/esp32/components/button/include/: button.h
firmware/esp32/components/button_ble/: CMakeLists.txt  button_ble.c
firmware/esp32/components/button_ble/include/: button_ble.h
firmware/esp32/components/button_gpio/: CMakeLists.txt  button_gpio.c
firmware/esp32/components/button_gpio/include/: button_gpio.h
firmware/esp32/components/ctaphid/: CMakeLists.txt  ctaphid.c
firmware/esp32/components/ctaphid/include/: ctaphid.h
firmware/esp32/components/led/: CMakeLists.txt  led.c
firmware/esp32/components/led/include/: led.h
firmware/esp32/components/usb_dev/: CMakeLists.txt  usb_cdc_cmd.c
firmware/esp32/components/usb_dev/include/: usb_cdc_cmd.h
firmware/esp32/components/usb_hid/: CMakeLists.txt  usb_hid.c
firmware/esp32/components/usb_hid/include/: usb_hid.h
firmware/esp32/components/user_presence/: CMakeLists.txt  user_presence.c
firmware/esp32/components/user_presence/include/: user_presence.h
firmware/esp32/core/include/: core_api.h
firmware/esp32/core/rust/: Cargo.toml
firmware/esp32/core/rust/src/: core_api.rs  ffi.rs  lib.rs
firmware/esp32/core/rust/src/ctap2/: cbor.rs  constants.rs  dispatcher.rs  mod.rs  status.rs  types.rs  user_presence.rs
firmware/esp32/core/rust/src/ctap2/commands/: get_assertion.rs  get_info.rs  make_credential.rs  mod.rs  reset.rs  selection.rs
firmware/esp32/main/: CMakeLists.txt  app_main.c
mobile/app/android/: settings.gradle.kts
mobile/app/android/app/: build.gradle.kts
mobile/app/android/app/src/androidTest/java/com/example/roottap/: ExampleInstrumentedTest.kt
mobile/app/android/app/src/androidTest/java/dev/roottap/mobile/: ExampleInstrumentedTest.kt
mobile/app/android/app/src/main/: AndroidManifest.xml
mobile/app/android/app/src/main/java/com/example/roottap/: MainActivity.kt
mobile/app/android/app/src/main/java/com/example/roottap/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/app/android/app/src/main/java/dev/roottap/mobile/: MainActivity.kt
mobile/app/android/app/src/main/java/dev/roottap/mobile/core/permissions/: BlePermissions.kt
mobile/app/android/app/src/main/java/dev/roottap/mobile/data/ble/: BleScanner.kt  BleUtils.kt  GattClient.kt
mobile/app/android/app/src/main/java/dev/roottap/mobile/ui/theme/: Color.kt  Theme.kt  Type.kt
mobile/app/android/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/android/app/src/test/java/com/example/roottap/: ExampleUnitTest.kt
mobile/app/android/app/src/test/java/dev/roottap/mobile/: ExampleUnitTest.kt
mobile/app/android/gradle/wrapper/: gradle-wrapper.properties
scripts/: arch_enable_kvm.sh  espidf_install.sh  install_android_studio_system.sh  setup_arch.sh
