[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "core"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
